DAY - 8, Fixed Backend + made Admin Auth page

--- a/Sutra React Ecom-WebApp/package.json
+++ b/Sutra React Ecom-WebApp/package.json
@@ -11,6 +11,7 @@
     "server": "cd backend && npm start"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
