--- a/Sutra React Ecom-WebApp/backend/package.json
+++ b/Sutra React Ecom-WebApp/backend/package.json
@@ -11,10 +11,14 @@
   "author": "",
   "license": "ISC",
   "type": "commonjs",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
     "mongodb": "^7.0.0",
     "mongoose": "^9.0.0"
   }
