--- a/Sutra React Ecom-WebApp/frontend/package.json
+++ b/Sutra React Ecom-WebApp/frontend/package.json
@@ -13,8 +13,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "terser": "^5.44.1"
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -29,6 +28,7 @@
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.17",
+    "terser": "^5.44.1",
     "vite": "^7.2.4"
   }
 }
