--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "tailwindcss -i ./src/input.css -o ./dist/output.css --minify"
   },
   "dependencies": {
+    "mongoose": "^9.0.0",
     "tailwind-scrollbar": "^4.0.2"
   },
   "description": "",
